# terradev-mcp

./: .npmignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  LICENSE  MCP_REGISTRY_STATUS.md  PUBLISHING_STATUS.md  PUBLISH_MCP_REGISTRY.md  README.md  SELF_HOSTING.md  SKILL.md  deploy.sh  docker-compose.yml  nginx-mcp.conf  npm-publish-manual.md  package.json  package.json.backup  publish-mcp-registry.sh  publish.sh  pyproject.toml  requirements.txt  server.json  terradev_mcp.py  terradev_mcp_cuco_tools.py  terradev_mcp_cuco_tools_fixed.py  terradev_mcp_optimizer.py  terraform.tf  test-config.json
.github/workflows/: ci.yml
demo/: generate_mcp_gif.py
terradev_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
