[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terradev-mcp"
version = "2.0.7"
description = "Complete Agentic GPU Infrastructure for Claude Code"
readme = "README.md"
license = {text = "BUSL-1.1"}
authors = [
    {name = "Terradev Team", email = "team@terradev.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Business Source License 1.1",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio-throttle>=1.0.0",
    "backoff>=2.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/theoddden/Terradev"
Repository = "https://github.com/theoddden/Terradev"
Issues = "https://github.com/theoddden/Terradev/issues"

[project.scripts]
terradev-mcp = "terradev_mcp:main"
